[package]
name = "usbd"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
jwalk = "0.8.1"
rayon = "1.11.0"
indicatif = "0.17"

# Windows Specific Crates:
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
] }
